<resources>
    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="info">Info</string>
    <string name="clear_after_calculation">Clear After Calculation</string>
    <string name="about">About</string>
    <string name="about_text">Rachel Brisman\n MCOO 521 \nSpring 2022</string>
    <string name="info_text">This app converts from one currency amount to another.</string>
    <string name="banner_text">Please enter the names, amount, and rate:</string>
    <string name="currency_type">Currency Name</string>
    <string name="currencyHelperText">ex: USD, NIS, CAD</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="currency_amount">Currency Amount</string>
    <string name="amount_ex">ex: 57.93</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="rate_ex">ex: 3.2% is .032</string>
    <string name="info">Info</string>
</resources>