<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_activity_margin"
    tools:showIn="@layout/main_include_cardviews">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/no_dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight"
                android:layout_margin="@dimen/default_activity_margin"
                android:hint="@string/currency_type"
                app:helperText="@string/currencyHelperText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currency2Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/no_dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight"
                android:layout_margin="@dimen/default_activity_margin"
                android:hint="@string/exchange_rate"
                app:helperText="@string/rate_ex">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currencyRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>